--- a/package.json
+++ b/package.json
@@ -18,10 +18,18 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "angular-datatables": "^16.0.0",
+    "datatables.net": "^1.13.6",
+    "datatables.net-dt": "^1.13.6",
     "jquery": "^3.7.1",
     "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
+    "ti-icons": "^0.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -29,7 +37,9 @@
     "@angular-devkit/build-angular": "^16.1.6",
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
+    "@types/datatables.net": "^1.10.25",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.22",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
