--- a/angular.json
+++ b/angular.json
@@ -89,17 +89,25 @@
             "styles": [
               "src/styles.css",
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/slick-carousel/slick/slick.min.js"
+              "node_modules/slick-carousel/slick/slick.min.js",
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/ti-icons/css/themify-icons.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css"
             ],
             "scripts": [
               "src/assets/script/login.js",
               "src/assets/script/slick.js",
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/slick-carousel/slick/slick.min.js"
+              "node_modules/slick-carousel/slick/slick.min.js",
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js"
             ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "cc9e7224-95ab-4c82-aa63-e7f52be1e097"
   }
 }
